# backend

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  test.cpp
graph-coloring/: CMakeLists.txt
graph-coloring/include/gcolor/: graph.h  heap.h
graph-coloring/src/: graph.cpp  heap.cpp
graph-coloring/tests/: color_test.cpp
include/gcolor/: graph.h  heap.h
include/vcfg/: virtual_mips.h
src/: graph.cpp  heap.cpp  virtual_mips.cpp
tests/: color_test.cpp  heap_test.cpp  test.cpp  test_module.cpp
virtual-cfg/: CMakeLists.txt
virtual-cfg/include/vcfg/: virtual_mips.h
virtual-cfg/src/: virtual_mips.cpp
